responsive + navigation commit

--- a/index.html
+++ b/index.html
@@ -14,22 +14,27 @@
   </head>
   <body>
     <header>
+      
       <h1 class="logo">Arcade &#x2022; House</h1>
       <h1 className="social-media">
         <a href="#">Github</a>
         <a href="#">Linkedin</a>
       </h1>
+      <ion-icon name="grid-outline" class="slide-in"></ion-icon>
     </header>
     <nav>
-      <a href="#" class="slide">About</a>
+      <ion-icon name="return-up-back-outline" class="slide-out"></ion-icon>
+      <a href="#" class="slide first">About</a>
+      <p class="dot">&#x2022;</p>
       <a href="https://www.google.com/" class="slide">Entertainment</a>
-      <p>&#x2022;</p>
+      <p class="dot">&#x2022;</p>
       <a href="#" class="slide">Community</a>
+      <p class="dot">&#x2022;</p>
       <a href="#" class="slide">Career</a>
     </nav>
     <main>
       <section>
-        <p>initiating arcade launch protocol <p class="timer"></p></p>
+        <p><ion-icon name="cog"></ion-icon> initiating arcade launch protocol <p class="timer"></p>  </p>
         <h2>Arcade House</h2>
         <p>
           Step into a world of classic gaming excitement and modern
@@ -41,6 +46,8 @@
         </p>
       </section>
     </main>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="tools/scripts/script.js"></script>
   </body>
 </html>
