--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <header>
-      
-      <h1 class="logo">Arcade &#x2022; House</h1>
+      <a href="index.html">
+      <h1 class="logo">Arcade &#x2022; House</h1></a>
       <h1 className="social-media">
         <a href="#">Github</a>
         <a href="#">Linkedin</a>
@@ -26,17 +26,17 @@
       <ion-icon name="return-up-back-outline" class="slide-out"></ion-icon>
       <a href="#" class="slide first">About</a>
       <p class="dot">&#x2022;</p>
-      <a href="https://www.google.com/" class="slide">Entertainment</a>
+      <a href="entertainment.html" class="slide entertainment">Entertainment</a>
       <p class="dot">&#x2022;</p>
       <a href="#" class="slide">Community</a>
       <p class="dot">&#x2022;</p>
       <a href="#" class="slide">Career</a>
     </nav>
     <main>
-      <section>
-        <p><ion-icon name="cog"></ion-icon> initiating arcade launch protocol <p class="timer"></p>  </p>
+      <section class="section-info">
+        <p><ion-icon name="cog" class="cog"></ion-icon> initiating arcade launch protocol <p class="timer"></p>  </p>
         <h2>Arcade House</h2>
-        <p>
+        <p class="info-text" style="margin-bottom: 2rem;">
           Step into a world of classic gaming excitement and modern
           entertainment at our arcade. Discover a vibrant collection of vintage
           arcade machines, offering a trip down memory lane for the young and
@@ -44,7 +44,17 @@
           Invaders to thrilling pinball machines, immerse yourself in the golden
           age of gaming.
         </p>
+        <button class="info-link">Recon us</button>
       </section>
+      <!-- animation -->
+
+        <div class="curtain-left">
+          <!-- <ion-icon name="game-controller-outline" class="pad-left"></ion-icon> -->
+        </div>
+        <div class="curtain-right"> 
+          <!-- <ion-icon name="game-controller-outline" class="pad-right"></ion-icon> -->
+        </div>
+
     </main>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
