--- a/entertainment.html
+++ b/entertainment.html
@@ -31,6 +31,51 @@
       <p class="dot">&#x2022;</p>
       <a href="#" class="slide">Career</a>
     </nav>
+
+    <main>
+      <section>
+        <div>
+          <img src="" alt="" />
+          <strong></strong>
+          <p></p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <strong></strong>
+          <p></p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <strong></strong>
+          <p></p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <strong></strong>
+          <p></p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <strong></strong>
+          <p></p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <strong></strong>
+          <p></p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <strong></strong>
+          <p></p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <strong></strong>
+          <p></p>
+        </div>
+      </section>
+    </main>
     <!-- curtain -->
     <div class="curtain-left">
       <!-- <ion-icon name="game-controller-outline" class="pad-left"></ion-icon> -->
