--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <ion-icon name="return-up-back-outline" class="slide-out"></ion-icon>
       <a href="#" class="slide first">About</a>
       <p class="dot">&#x2022;</p>
-      <a href="entertainment.html" class="slide entertainment">Entertainment</a>
+      <button class="slide entertainment">Entertainment</button>
       <p class="dot">&#x2022;</p>
       <a href="#" class="slide">Community</a>
       <p class="dot">&#x2022;</p>
@@ -55,6 +55,13 @@
           <!-- <ion-icon name="game-controller-outline" class="pad-right"></ion-icon> -->
         </div>
 
+        <!-- links -->
+        <div class="links-hidden">
+        <a href="entertainment.html" class="aboutLink">1</a>
+        <a href="entertainment.html" class="entertainmentLink">1</a>
+        <a href="entertainment.html" class="communityLink">1</a>
+        <a href="entertainment.html" class="carrerLink">1</a>
+        <div></div>
     </main>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
