entertainment page update

--- a/entertainment.html
+++ b/entertainment.html
@@ -33,48 +33,7 @@
     </nav>
 
     <main>
-      <section>
-        <div>
-          <img src="" alt="" />
-          <strong></strong>
-          <p></p>
-        </div>
-        <div>
-          <img src="" alt="" />
-          <strong></strong>
-          <p></p>
-        </div>
-        <div>
-          <img src="" alt="" />
-          <strong></strong>
-          <p></p>
-        </div>
-        <div>
-          <img src="" alt="" />
-          <strong></strong>
-          <p></p>
-        </div>
-        <div>
-          <img src="" alt="" />
-          <strong></strong>
-          <p></p>
-        </div>
-        <div>
-          <img src="" alt="" />
-          <strong></strong>
-          <p></p>
-        </div>
-        <div>
-          <img src="" alt="" />
-          <strong></strong>
-          <p></p>
-        </div>
-        <div>
-          <img src="" alt="" />
-          <strong></strong>
-          <p></p>
-        </div>
-      </section>
+      <section></section>
     </main>
     <!-- curtain -->
     <div class="curtain-left">
