entertainment page update

--- a/entertainment.html
+++ b/entertainment.html
@@ -33,6 +33,9 @@
     </nav>
 
     <main>
+      <article>
+        <h2 class="article-heading"></h2>
+      </article>
       <section></section>
     </main>
     <!-- curtain -->
@@ -44,6 +47,7 @@
     </div>
 
     <script src="tools/scripts/entertainment.js"></script>
+    <script src="tools/scripts/navigation.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
