--- a/index.html
+++ b/index.html
@@ -66,5 +66,6 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="tools/scripts/script.js"></script>
+    <script src="tools/scripts/navigation.js"></script>
   </body>
 </html>
