--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Welcome to Arcade House! Get ready for a nostalgic gaming experience. Step into our virtual arcade filled with classic and modern games. Play solo or challenge friends for high scores. Join the fun now!">
+    <meta name="keywords" content="arcade, gaming, games, classic games, modern games, high scores">
+    <meta name="author" content="Uros Zikic">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
