about modal update

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <title>Document</title>
+    <link rel="stylesheet" href="tools/styles/shared.css">
     <link rel="stylesheet" href="tools/styles/style.css" />
     <link rel="stylesheet" href="tools/styles/footer.css">
   </head>
@@ -33,6 +34,12 @@
       <p class="dot">&#x2022;</p>
       <button class="slide contact">Contact</button>
     </nav>
+
+    <!-- article: ABOUT -->
+    <article class="modal-about">
+        <p class="about-text">Welcome to our vibrant arcade house! We're your ultimate destination for endless fun and nostalgia. With a captivating collection of classic and modern arcade games, we offer an immersive experience for gamers of all ages. Our passion for gaming drives us to curate an exciting lineup that caters to diverse tastes. From the flashing lights to the exhilarating sounds, our space is designed to spark joy and create lasting memories. Whether you're reliving fond memories or discovering the magic of arcades for the first time, we invite you to join us in this thrilling adventure. Let's play, laugh, and celebrate the world of gaming together!</p>
+    </article>
+
     <main>
       <section class="section-info">
         <p><ion-icon name="cog" class="cog"></ion-icon> initiating arcade launch protocol <p class="timer"></p>  </p>
