--- a/entertainment.html
+++ b/entertainment.html
@@ -19,6 +19,7 @@
       rel="stylesheet"
     />
     <title>Document</title>
+    <link rel="stylesheet" href="tools/styles/shared.css" />
     <link rel="stylesheet" href="tools/styles/entertainment.css" />
     <link rel="stylesheet" href="tools/styles/footer.css" />
   </head>
@@ -38,6 +39,21 @@
       <p class="dot">&#x2022;</p>
       <button class="slide contact">Contact</button>
     </nav>
+    <!-- article: ABOUT -->
+    <div class="modal-about">
+      <p class="about-text">
+        Welcome to our vibrant arcade house! We're your ultimate destination for
+        endless fun and nostalgia. With a captivating collection of classic and
+        modern arcade games, we offer an immersive experience for gamers of all
+        ages. Our passion for gaming drives us to curate an exciting lineup that
+        caters to diverse tastes. From the flashing lights to the exhilarating
+        sounds, our space is designed to spark joy and create lasting memories.
+        Whether you're reliving fond memories or discovering the magic of
+        arcades for the first time, we invite you to join us in this thrilling
+        adventure. Let's play, laugh, and celebrate the world of gaming
+        together!
+      </p>
+    </div>
 
     <main>
       <article>
@@ -45,6 +61,7 @@
       </article>
       <section></section>
     </main>
+
     <!-- curtain -->
     <div class="curtain-left">
       <!-- <ion-icon name="game-controller-outline" class="pad-left"></ion-icon> -->
@@ -63,10 +80,13 @@
       <a href="contact.html" class="contactLink">1</a>
     </div>
 
-    <footer></footer>
+    <footer>
+      <script src="tools/scripts/footer.js"></script>
+    </footer>
 
     <script src="tools/scripts/entertainment.js"></script>
     <script src="tools/scripts/navigation.js"></script>
+
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
@@ -75,6 +95,5 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <script src="tools/scripts/footer.js"></script>
   </body>
 </html>
